--- a/Home/home.html
+++ b/Home/home.html
@@ -6,16 +6,19 @@
     <meta name="keywords" content=" "> <!-- Показва ключови думи на search engine-а за по-добро откриване на страницата-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Определя размера на страницата според устройството-->
     <meta name="google" content="notranslate"> <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
-    <link rel="icon" href="Media/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
-    <link rel="shortcut" href="Media/LogoTransparent.png">
+
+    <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
+    <link rel="shortcut" href="../Photos/LogoTransparent.png">
     <link rel="stylesheet" href="home.css"> <!-- Свързваме страницата със CSS-->
+
     <title>AutoRentals</title> <!-- Задаваме име на страницата-->
+
 </head>
 <body> <!-- В body се съдържат видимите обекти в сайта -->
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
             <a href="home.html"> 
-                <img src="Media/LogoTransparent.png" width="100" height="75" alt="Company Logo">
+                <img src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo">
             </a>
         </div>
         <div class="Links"> <!-- Създаваме обект Links, който съдържа линкове под формата на текст -->
@@ -24,7 +27,7 @@
             <a href="about.html">About us</a>
         </div>
         <div class="Login"><!-- Създаваме обект Login, който съдържа link-a към формата -->
-            <a href="login.html"><img src="Media/login.png" width="75" height="75"></a>
+            <a href="../Login/Login.html"><img src="../Photos/login.png" width="75" height="75"></a>
         </div>
     </header>
 </body>
