--- a/Home/home.html
+++ b/Home/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Определя размера на страницата според устройството-->
     <meta name="google" content="notranslate"> <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
 
-    <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
-    <link rel="shortcut" href="../Photos/LogoTransparent.png">
+    <link rel="icon" href="../Photos/test/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
+    <link rel="shortcut" href="../Photos/test/LogoTransparent.png">
     <link rel="stylesheet" href="home.css"> <!-- Свързваме страницата със CSS-->
 
     <title>AutoRentals</title> <!-- Задаваме име на страницата-->
@@ -18,7 +18,7 @@
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
             <a href="home.html"> 
-                <img src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo">
+                <img src="../Photos/test/LogoTransparent.png" width="100" height="75" alt="Company Logo">
             </a>
         </div>
         <div class="Links"> <!-- Създаваме обект Links, който съдържа линкове под формата на текст -->
@@ -27,7 +27,7 @@
             <a href="about.html">About us</a>
         </div>
         <div class="Login"><!-- Създаваме обект Login, който съдържа link-a към формата -->
-            <a href="../Login/Login.html"><img src="../Photos/login.png" width="75" height="75"></a>
+            <a href="../Login/Login.html"><img src="../Photos/test/login.png" width="75" height="75"></a>
         </div>
     </header>
 </body>
