--- a/Home/home.html
+++ b/Home/home.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head> <!-- В head се съдържа информацията за страницата -->
-    <meta charset="UTF-8"> <!-- Означава наична за кодиране на знаците в документа, използваме UTF-8 понеже поддържа широк набор от знаци и се разпознава от много браузъри-->
-    <meta name="description" content=" "> <!-- Показва описанието на страницата -->
-    <meta name="keywords" content=" "> <!-- Показва ключови думи на search engine-а за по-добро откриване на страницата-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Определя размера на страницата според устройството-->
-    <meta name="google" content="notranslate"> <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
 
-    <link rel="icon" href="../Photos/test/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
-    <link rel="shortcut" href="../Photos/test/LogoTransparent.png">
+<head> <!-- В head се съдържа информацията за страницата -->
+    <meta charset="UTF-8">
+    <!-- Означава наична за кодиране на знаците в документа, използваме UTF-8 понеже поддържа широк набор от знаци и се разпознава от много браузъри-->
+    <meta name="description" content=" "> <!-- Показва описанието на страницата -->
+    <meta name="keywords" content=" ">
+    <!-- Показва ключови думи на search engine-а за по-добро откриване на страницата-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Определя размера на страницата според устройството-->
+    <meta name="google" content="notranslate">
+    <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
+
+    <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
+    <link rel="shortcut" href="../Photos/LogoTransparent.png">
     <link rel="stylesheet" href="home.css"> <!-- Свързваме страницата със CSS-->
 
     <title>AutoRentals</title> <!-- Задаваме име на страницата-->
 
 </head>
+
 <body> <!-- В body се съдържат видимите обекти в сайта -->
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
-            <a href="home.html"> 
-                <img src="../Photos/test/LogoTransparent.png" width="100" height="75" alt="Company Logo">
+            <a href="home.html">
+                <img src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo">
             </a>
         </div>
         <div class="Links"> <!-- Създаваме обект Links, който съдържа линкове под формата на текст -->
@@ -26,8 +32,9 @@
             <a href="catalog.html">Catalog</a>
             <a href="about.html">About us</a>
         </div>
-        <div class="Login"><!-- Създаваме обект Login, който съдържа link-a към формата -->
-            <a href="../Login/Login.html"><img src="../Photos/test/login.png" width="75" height="75"></a>
+        <div class="image-container"><!-- Създаваме обект Login, който съдържа link-a към формата -->
+            <a href="../Login/Login.html"><img class="original-image" src="../Photos/login.png" width="75" height="75"></a>
+            <a href="../Login/test/Login.html"><img class="hover-image" src="../Photos/test/login.png" width="75" height="75"></a>
         </div>
     </header>
 </body>
