--- a/Home/home.html
+++ b/Home/home.html
@@ -21,22 +21,29 @@
 </head>
 
 <body> <!-- В body се съдържат видимите обекти в сайта -->
+    <div class="Background">
+        <video autoplay loop muted>
+            <source src="../Photos/video2.mp4" type="video/mp4" >
+        </video>
+    </div>
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
-            <a href="home.html">
-                <img src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo">
-            </a>
+            <a href="home.html"><img class="original-logo" src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo"></a>
+            <a href="home.html"><img class="hovered-logo" src="../Photos/Test/LogoTransparent.png" width="100" height="75"></a>
         </div>
         <div class="Links"> <!-- Създаваме обект Links, който съдържа линкове под формата на текст -->
             <a href="home.html">Home</a>
             <a href="catalog.html">Catalog</a>
             <a href="about.html">About us</a>
         </div>
-        <div class="image-container"><!-- Създаваме обект Login, който съдържа link-a към формата -->
+        <div class="Login"><!-- Създаваме обект Login, който съдържа link-a към формата -->
             <a href="../Login/Login.html"><img class="original-image" src="../Photos/login.png" width="75" height="75"></a>
-            <a href="../Login/test/Login.html"><img class="hover-image" src="../Photos/test/login.png" width="75" height="75"></a>
+            <a href="../Login/test/Login.html"><img class="hovered-image" src="../Photos/test/login.png" width="75" height="75"></a>
         </div>
     </header>
+    <main>
+        
+    </main>
 </body>
 
 </html>
