--- a/Login/Login.html
+++ b/Login/Login.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="Login.Css">
+    <!-- Означава наична за кодиране на знаците в документа, използваме UTF-8 понеже поддържа широк набор от знаци и се разпознава от много браузъри-->
+    <meta name="description" content=" "> <!-- Показва описанието на страницата -->
+    <meta name="keywords" content=" ">
+    <!-- Показва ключови думи на search engine-а за по-добро откриване на страницата-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Определя размера на страницата според устройството-->
+    <meta name="google" content="notranslate">
+    <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
+    <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
+    <link rel="shortcut" href="../Photos/LogoTransparent.png">
+    <link rel="stylesheet" href="Login.css"> <!-- Свързваме страницата със CSS-->
+    <title>AutoRentals | Login</title> <!-- Задаваме име на страницата-->
 </head>
+
 <body>
-    <div class="box">
-        <div class="form">
-            <h2>Sign in</h2>
-            <div class="inputBox">
-                <input type="text" required="required">
-                <span>Username</span>
-                <i></i>
-            </div>
-            <div class="inputBox">
-                <input type="password" required="required">
-                <span>Password</span>
-                <i></i>
-            </div>
-            <div class="links">
-                <a href="#">Forgot Password</a>
-                <a href="#">Signup</a>
-            </div>
-            <input type="submit" value="Login">
-        </div>
-    </div>
+    
 </body>
+
 </html>
