--- a/Home/home.html
+++ b/Home/home.html
@@ -11,25 +11,25 @@
     <!-- Определя размера на страницата според устройството-->
     <meta name="google" content="notranslate">
     <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
-
     <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
     <link rel="shortcut" href="../Photos/LogoTransparent.png">
     <link rel="stylesheet" href="home.css"> <!-- Свързваме страницата със CSS-->
 
     <title>AutoRentals</title> <!-- Задаваме име на страницата-->
-
 </head>
 
 <body> <!-- В body се съдържат видимите обекти в сайта -->
     <div class="Background">
         <video autoplay loop muted>
-            <source src="../Photos/video2.mp4" type="video/mp4" >
+            <source src="../Photos/video2.mp4" type="video/mp4">
         </video>
     </div>
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
-            <a href="home.html"><img class="original-logo" src="../Photos/LogoTransparent.png" width="100" height="75" alt="Company Logo"></a>
-            <a href="home.html"><img class="hovered-logo" src="../Photos/Test/LogoTransparent.png" width="100" height="75"></a>
+            <a href="home.html"><img class="original-logo" src="../Photos/LogoTransparent.png" width="100" height="75"
+                    alt="Company Logo"></a>
+            <a href="home.html"><img class="hovered-logo" src="../Photos/Test/LogoTransparent.png" width="100"
+                    height="75"></a>
         </div>
         <div class="Links"> <!-- Създаваме обект Links, който съдържа линкове под формата на текст -->
             <a href="home.html">Home</a>
@@ -37,13 +37,11 @@
             <a href="about.html">About us</a>
         </div>
         <div class="Login"><!-- Създаваме обект Login, който съдържа link-a към формата -->
-            <a href="../Login/Login.html"><img class="original-image" src="../Photos/login.png" width="75" height="75"></a>
-            <a href="../Login/test/Login.html"><img class="hovered-image" src="../Photos/test/login.png" width="75" height="75"></a>
+            <a href="../Login/Login.html"><img class="original-image" src="../Photos/login.png" width="75"
+                    height="75"></a>
+            <a href="../Login/test/Login.html"><img class="hovered-image" src="../Photos/test/login.png" width="75"
+                    height="75"></a>
         </div>
     </header>
     <main>
-        
     </main>
-</body>
-
-</html>
