Fixed index page

--- a/Home/home.html
+++ b/Home/home.html
@@ -19,11 +19,6 @@
 </head>
 
 <body> <!-- В body се съдържат видимите обекти в сайта -->
-    <div class="Background">
-        <video autoplay loop muted>
-            <source src="../Photos/video2.mp4" type="video/mp4">
-        </video>
-    </div>
     <header>
         <div class="Logo"> <!-- Създаваме обект Logo, който съдържа линк под формата на снимка -->
             <a href="home.html"><img class="original-logo" src="../Photos/LogoTransparent.png" width="100" height="75"
@@ -43,6 +38,13 @@
                     height="75"></a>
         </div>
     </header>
-    
+
     <main>
+        <div class="Background">
+            <video autoplay loop muted>
+                <source src="../Photos/video2.mp4" type="video/mp4">
+            </video>
+        </div>
     </main>
+</body>
+</html>
