--- a/Login/Login.html
+++ b/Login/Login.html
@@ -3,22 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- Означава наична за кодиране на знаците в документа, използваме UTF-8 понеже поддържа широк набор от знаци и се разпознава от много браузъри-->
-    <meta name="description" content=" "> <!-- Показва описанието на страницата -->
+    <meta name="description" content=" ">
     <meta name="keywords" content=" ">
-    <!-- Показва ключови думи на search engine-а за по-добро откриване на страницата-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Определя размера на страницата според устройството-->
     <meta name="google" content="notranslate">
-    <!-- Показва на search engine-a, че страницата не трябва да се превежда-->
-    <link rel="icon" href="../Photos/LogoTransparent.png"> <!-- Използваме го, за да зададем лого на страницата-->
+    <link rel="icon" href="../Photos/LogoTransparent.png">
     <link rel="shortcut" href="../Photos/LogoTransparent.png">
-    <link rel="stylesheet" href="Login.css"> <!-- Свързваме страницата със CSS-->
-    <title>AutoRentals | Login</title> <!-- Задаваме име на страницата-->
-</head>
-
+    <link rel="stylesheet" href="Login.css">
+    <title>AutoRentals Login</title>
 <body>
-    
+	<div class="container" id="container">
+		<div class="form-container log-in-container">
+			<form action="#">
+				<h1>Login</h1>
+				<div class="social-container">
+					<a href="#" class="social"><i class="fa fa-google fa-2x"></i></a>
+				</div>
+				<span>or use your account</span>
+				<input type="email" placeholder="Email" />
+				<input type="password" placeholder="Password" />
+				<a href="#">Forgot your password?</a>
+				<button>Log In</button>
+			</form>
+		</div>
+		<div class="overlay-container">
+			<div class="overlay">
+				<div class="overlay-panel overlay-right">
+					<h2>Добре дошли в</h2>
+					<h1>AutoRentals</h1>
+                    <p>С регистрацията потвърждавате, че сте сългасен/на с общите условия на AutoRentals</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-
 </html>
